Route to get TreatmentBMPUpsertDtos by ProjectID now returning dtos containing ModelingAttribute data. Currently all fields are being populated, but may eventually want to add a switch statement so only relevant fields will populate depending on ModelingTypeID. Changes to web's generated file.
